--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
               <br>
               <br>
             <h2>Background</h2>
-            <p class="lead">
+            <p>
             I'm Richard Sicoli. I am currently a graduate student at Stony Brook University, where I am majoring in computer science. I’ve been developing apps since freshman year of high school. Since embarking on my journey of software development, I have produced numerous apps and even founded my own company. </p>
 
-            <p class="lead">
-            I am also immensely passionate about machine learning and deep learning. Specifically, my current areas of research are in computer vision and natural language processing. I am currently a research assistant at Stony Brook University, under the guidance of <a href="http://www3.cs.stonybrook.edu/~niranjan/" target="_blank"> Prof.  Niranjan Balasubramanian </a>.
+            <p>
+            I am also immensely passionate about machine learning and deep learning. Specifically, my current areas of research are in computer vision and natural language processing. I am currently a research assistant at Stony Brook University, under the guidance of <a href="http://www3.cs.stonybrook.edu/~niranjan/" target="_blank"> Prof.  Niranjan Balasubramanian</a>.
            </p>
         
           </div>
@@ -83,8 +83,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Education</h2>
-            <p class="lead"><span class="font-weight-bold">Stony Brook University</span> <br>Master of Science (M.S.), Computer Science <br> 2017 – Dec. 2018 (In Progress) </p>
-            <p class="lead"><span class="font-weight-bold">Stony Brook University</span> <br>Bachelor of Science (B.S.), Computer Science <br> 2013 – 2017 </p>
+            <p><span class="font-weight-bold">Stony Brook University</span> <br>Master of Science (M.S.), Computer Science <br> 2017 – Dec. 2018 (In Progress) </p>
+            <p><span class="font-weight-bold">Stony Brook University</span> <br>Bachelor of Science (B.S.), Computer Science <br> 2013 – 2017 </p>
           </div>
         </div>
       </div>
@@ -98,8 +98,8 @@
             <br>
             <h3>GameFuse, LLC</h3>
             <h5 class="text-muted">2011 - 2014</h5>
-            <p class="lead">I have developed 3 iOS games through my indie game development company, GameFuse, LLC, which I founded back in high school. These apps were <a href="https://itunes.apple.com/us/app/star-runner-lite/id459638716?ls=1&mt=8" target="_blank"> Star Runner </a>, <a href="https://itunes.apple.com/us/app/amazing-paddle/id439608788?ls=1&mt=8" target="_blank"> Amazing Paddle </a> and <a href="https://itunes.apple.com/us/app/6-colors/id662582623?ls=1&mt=8" target="_blank"> 6 Colors </a>. I also developed a custom physics engine in Objective-C for these games, <a href="Frost2D FrameworkDocumentation.pdf" target="_blank"> Frost2D </a>. </p>
-            <p class="lead"> This experience marked the start of my journey into software development. Most importantly, it allowed me to develop very strong skills in algorithms, physics, networking (TCP/UDP), code optimization/memory management, human-computer interaction, and design strategies.</p>
+            <p>I have developed 3 iOS games through my indie game development company, GameFuse, LLC, which I founded back in high school. These apps were <a href="https://itunes.apple.com/us/app/star-runner-lite/id459638716?ls=1&mt=8" target="_blank"> Star Runner</a>, <a href="https://itunes.apple.com/us/app/amazing-paddle/id439608788?ls=1&mt=8" target="_blank"> Amazing Paddle</a> and <a href="https://itunes.apple.com/us/app/6-colors/id662582623?ls=1&mt=8" target="_blank"> 6 Colors</a>. I also developed a custom physics engine in Objective-C for these games, <a href="Frost2D FrameworkDocumentation.pdf" target="_blank"> Frost2D</a>. </p>
+            <p> This experience marked the start of my journey into software development. Most importantly, it allowed me to develop very strong skills in algorithms, physics, networking (IP/TCP/UDP), code optimization/memory management, human-computer interaction, and design strategies.</p>
             <img >
 
             <figure class="figure">
@@ -112,8 +112,8 @@
             <br>
             <h3>Charmtech Labs, LLC</h3>
             <h5 class="text-muted">2013 - 2015</h5>
-            <p class="lead">I was hired during my first semester at college as a software engineer for a startup at the <a href="https://www.cewit.org/" target="_blank"> Center of Excellence in Wireless & Information Technology </a> (CEWIT). I worked with <a href="http://www3.cs.stonybrook.edu/~borodin/" target="_blank"> Yevgen Borodin </a> and a team of researchers and engineers on the app, <a href="https://www.captivoice.com/capti-site/" target="_blank"> Capti </a>. Capti allows people to listen to content on the web by extracting webpage content and adding it to a playlist. The app features a heavy focus on accessibility for people with vision impairments. I worked on the iOS app, including the interfaces, Core Data, landscape and iPad support, text to speech system, and the custom browser.</p>
-            <p class="lead">My experience at Charmtech allowed me to develop skills in source control managment, teamwork, browsers, web technologies, databases, speech synthesis and software accessibilty. I found the experience working with accessibilty to be the most interesting due to the real-world impact it can have on people. In fact, Capti won the 2014 FCC Chairman's Award for Advancing Accessibility in the category of Mobile Web Browsers </p>
+            <p>I was hired during my first semester at college as a software engineer for a startup at the <a href="https://www.cewit.org/" target="_blank"> Center of Excellence in Wireless & Information Technology</a> (CEWIT). I worked with <a href="http://www3.cs.stonybrook.edu/~borodin/" target="_blank"> Yevgen Borodin</a> and a team of researchers and engineers on the app, <a href="https://www.captivoice.com/capti-site/" target="_blank"> Capti</a>. Capti allows people to listen to content on the web by extracting webpage content and adding it to a playlist. The app features a heavy focus on accessibility for people with vision impairments. I worked on the iOS app, including the interfaces, Core Data, landscape and iPad support, text to speech system, and the custom browser.</p>
+            <p>My experience at Charmtech allowed me to develop skills in source control management, teamwork, browsers, web technologies, databases, speech synthesis and software accessibility. I found the experience working with accessibility to be the most interesting due to the real-world impact it can have on people. In fact, Capti won the 2014 FCC Chairman's Award for Advancing Accessibility in the category of Mobile Web Browsers </p>
 
             <figure class="figure">
             <img src="capti.png" style="width:100%" class="figure-img">
@@ -125,7 +125,7 @@
             <br>
             <h3>Applied Application Technology, LLC</h3>
             <h5 class="text-muted">2015 - 2016</h5>
-            <p class="lead">I was co-founder and software engineer for the app, <a href="https://www.youtube.com/watch?v=sHsPi8vozAk" target="_blank">ClothesOn</a>, which received funding through the Stony Brook entrepreneurs challenge. ClothesOn allows a user to manage their wardrobe and get recommendations on what to wear. I developed the entire iOS application from the interface and backend to the recommendation system.</p>
+            <p>I was co-founder and software engineer for the app, <a href="https://www.youtube.com/watch?v=sHsPi8vozAk" target="_blank">ClothesOn</a>, which received funding through the Stony Brook entrepreneurs challenge. ClothesOn allows a user to manage their wardrobe and get recommendations on what to wear. I developed the entire iOS application from the interface and backend to the recommendation system.</p>
             <figure class="figure">
             <img src="clotheson.png" style="width:100%" class="figure-img">
             <figcaption style = "margin-left: 15%" class="figure-caption">The ClothesOn iOS app.</figcaption>
@@ -136,8 +136,8 @@
             <br>
             <h3>Stony Brook University Research Assistant</h3>
             <h5 class="text-muted">2017 - 2018</h5>
-            <p class="lead">Currently working as a research assistant with <a href="http://www3.cs.stonybrook.edu/~niranjan/" target="_blank"> Prof.  Niranjan Balasubramanian</a>, on a privacy system. The system uses machine learning for entity-level sentiment analysis to find a user's view towards the people or places they read about online. </p>
-            <p class="lead">
+            <p>Currently working as a research assistant with <a href="http://www3.cs.stonybrook.edu/~niranjan/" target="_blank"> Prof.  Niranjan Balasubramanian</a>, on a privacy system. The system uses machine learning for entity-level sentiment analysis to find a user's view towards the people or places they read about online. </p>
+            <p>
             The ultimate goal is to develop a local application that can inform a user of what can be learned from their personal information. The application could then recommend steps to preserve neutrality/anonymity.
             </p>
           </div>
@@ -150,7 +150,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Accomplishments</h2>
-            <ul class="lead" style="padding-left: 1.2em;"> 
+            <ul style="padding-left: 1.2em;"> 
               <li>
                 <span class="font-weight-bold">2014 FCC Chairman's Award for Advancing Accessibility in the category of Mobile Web Browsers</span>
                 <br> 
@@ -186,8 +186,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Projects</h2>
-            <p class="lead">Below are a list of interesting projects that I have worked on either in my spare time or for a course.</p>
-            <ul class="lead" style="padding-left: 1.2em;"> 
+            <p>Below is a list of interesting projects that I have worked on either in my spare time or for a course.</p>
+            <ul style="padding-left: 1.2em;"> 
               <li>
                 <span class="font-weight-bold">DeepBoard: A Smart Touch Keyboard with Private Prediction of User Photos using Deep Neural Networks</span>
                 <br> 
@@ -203,7 +203,7 @@
               <li>
                 <span class="font-weight-bold">Linux Kernel Development</span>
                 <br> 
-                <p>Implemented new system calls (encryption and deduplication), ioctl commands, modified kernel source code, and built a stackable filesystem for my gradute operating systems course.  </p>
+                <p>Implemented new system calls (encryption and deduplication), ioctl commands, modified kernel source code, and built a stackable filesystem for my graduate operating systems course.</p>
               </li>
 
               <li>
@@ -232,7 +232,7 @@
             <br>
               <br>
 
-              <p class="lead">Below is a non-exhaustive list of other miscellaneous coursework I have worked on.</p>
+              <p>Below is a non-exhaustive list of other miscellaneous coursework I have worked on.</p>
 
              
               <li>
