--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
     <!-- Custom styles for this template -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
+    <style type="text/css">
+      p {
+        font-size: 19px;
+      }
+
+      ul {
+        font-size: 19px;
+      }
+    </style>
 
   </head>
 
@@ -31,6 +40,9 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#background">Background</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#education">Education</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
