--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p class="lead">Software Engineer and Computer Scientist</p>
         <p>Download my Resume/CV below or continue scrolling to learn more about me and the projects that I have worked on.</p>
         <br>
-        <a href="#" target="_blank" class="btn btn-primary btn-lg" role="button">Download Resume/CV</a>
+        <a href="RichardSicoli.pdf" target="_blank" class="btn btn-primary btn-lg" role="button">Download Resume/CV</a>
       </div>
     </header>
 
@@ -147,7 +147,7 @@
 
             <br>
             <h3>Stony Brook University Research Assistant</h3>
-            <h5 class="text-muted">2017 - 2018</h5>
+            <h5 class="text-muted">2017 - Present</h5>
             <p>Currently working as a research assistant with <a href="http://www3.cs.stonybrook.edu/~niranjan/" target="_blank"> Prof.  Niranjan Balasubramanian</a>, on a privacy system. The system uses machine learning for entity-level sentiment analysis to find a user's view towards the people or places they read about online. </p>
             <p>
             The ultimate goal is to develop a local application that can inform a user of what can be learned from their personal information. The application could then recommend steps to preserve neutrality/anonymity.
