--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <br>
 
             <br>
-            <h3>Applied Application Technology, LLC</h3>
+            <h3>Applied Application Technologies, LLC</h3>
             <h5 class="text-muted">2015 - 2016</h5>
             <p>I was co-founder and software engineer for the app, <a href="https://www.youtube.com/watch?v=sHsPi8vozAk" target="_blank">ClothesOn</a>, which received funding through the Stony Brook entrepreneurs challenge. ClothesOn allows a user to manage their wardrobe and get recommendations on what to wear. I developed the entire iOS application from the interface and backend to the recommendation system.</p>
             <figure class="figure">
